--- a/EniHolidayCalendar.Data/packages.config
+++ b/EniHolidayCalendar.Data/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
+  <package id="EFlogger-For6" version="0.3.3" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="odp.net.managed" version="121.1.2" targetFramework="net45" />
   <package id="odp.net.x64" version="112.3.20" targetFramework="net45" />
   <package id="Oracle.DataAccess.x86" version="2.112.1.0" targetFramework="net45" />
